--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,10 +6,17 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 bind -n M-H previous-window
 bind -n M-L next-window
 
+# Plugins (using tpm)
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @plugin 'omerxx/tmux-sessionx'
+
 # Catppuccin config
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
