feat: change tmux options
Setting the status bar to the top
Automatically renumber windows
Use vi keybind
Enable mouse support

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,6 +6,18 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 bind -n M-H previous-window
 bind -n M-L next-window
 
+# Put the status bar to the top
+set -g status-position top
+
+# Renumber windows
+set -g renumber-windows on
+
+# Set vi mode
+set -g mode-keys vi
+
+# Enable mouse
+set -g mouse on
+
 # Plugins (using tpm)
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -29,6 +41,5 @@ set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W"
 
-set -g mouse on
 
 run '~/.config/tmux/plugins/tpm/tpm'
