--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,6 +6,12 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 bind -n M-H previous-window
 bind -n M-L next-window
 
+# Resize pane using ctrl arrow key
+bind -n C-M-Left  resize-pane -L 1
+bind -n C-M-Right resize-pane -R 1
+bind -n C-M-Up    resize-pane -U 1
+bind -n C-M-Down  resize-pane -D 1
+
 # Put the status bar to the top
 set -g status-position top
 
