feat: restore session even when system reboot

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -35,6 +35,10 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'omerxx/tmux-sessionx'
 
+# Restore
+set -g @continuum-restore 'on'
+set -g @resurrect-strategy-nvim 'session'
+
 # Catppuccin config
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
