refactor: save downloaded videos on ~/Videos
Instead of putting inside the `yt-dlp` directory

--- a/.config/yt-dlp.conf
+++ b/.config/yt-dlp.conf
@@ -1,8 +1,8 @@
 # Update yt-dlp
 -U
 
-# Save all video from a playlist to seperate playlist folder 
--o "~/Videos/yt-dlp/%(title)s [%(id)s].%(ext)s"
+# Save all downloaded videos into Videos directory
+-o "~/Videos/%(title)s [%(id)s].%(ext)s"
 
 # Select best quality with the video
 -f "bv+ba/b"
