feat: also download japanese sub automatically

--- a/.config/yt-dlp.conf
+++ b/.config/yt-dlp.conf
@@ -8,7 +8,7 @@
 -f "bv+ba/b"
 
 # Embed metadata to the video
---sub-lang="en,id"
+--sub-langs="en,id,ja"
 --embed-thumbnail
 --embed-subs
 --embed-metadata
