refactor: use lowercase filepath on yt-dlp config

--- a/.config/yt-dlp.conf
+++ b/.config/yt-dlp.conf
@@ -2,7 +2,7 @@
 -U
 
 # Save all downloaded videos into Videos directory
--o "~/Videos/%(title)s [%(id)s].%(ext)s"
+-o "~/videos/%(title)s [%(id)s].%(ext)s"
 
 # Select best quality with the video
 -f "bv+ba/b"
