--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -12,8 +12,8 @@ bind -n C-M-Right resize-pane -R 1
 bind -n C-M-Up    resize-pane -U 1
 bind -n C-M-Down  resize-pane -D 1
 
-# Put the status bar to the top
-set -g status-position top
+# Put the status bar to the bottom
+set -g status-position bottom
 
 # Renumber windows
 set -g renumber-windows on
