--- a/.config/yt-dlp.conf
+++ b/.config/yt-dlp.conf
@@ -22,7 +22,7 @@
 --downloader aria2c --downloader-args aria2c:'-c -x6'
 
 # Merge the video to mp4
---merge-output-format mp4
+--remux-video mp4
 
 # audio
 --audio-format mp3
