feat(kitty): add padding

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,6 +11,9 @@ modify_font cell_width 95%
 # Hide Window Decoration (Titlebar)
 hide_window_decorations yes
 
+# Window Padding (all sides)
+window_padding_width 5
+
 # Automatically attach tmux to a session, if no session
 # exists, a new one is created
 shell zsh --login -c "tmux a || tmux"
