feat(yt-dlp): also merge the video to be mp4

--- a/.config/yt-dlp.conf
+++ b/.config/yt-dlp.conf
@@ -19,8 +19,9 @@
 # Use aria2c for faster download
 --downloader aria2c --downloader-args aria2c:'-c -x6'
 
-# Merge the video to mp4
+# Remux and merge the video to mp4
 --remux-video mp4
+--merge-output-format mp4
 
 # audio
 --audio-format mp3
