--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -3,11 +3,10 @@
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
     "source": "~/.config/fastfetch/logo.png",
-    "type": "kitty-direct",
+    "type": "kitty",
     "width": 18,
     "padding": {
-      "top": 2,
-      "left": 3
+      "top": 1
     }
   },
   "display": {
