--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,3 +13,14 @@ hide_window_decorations yes
 
 # Window Padding (all sides)
 window_padding_width 5
+
+# Allow other program to control kitty
+allow_remote_control yes
+listen_on unix:@mykitty
+
+# Keybind
+# ctrl + vim key to navigate
+map ctrl+j kitten pass_keys.py bottom ctrl+j
+map ctrl+k kitten pass_keys.py top    ctrl+k
+map ctrl+h kitten pass_keys.py left   ctrl+h
+map ctrl+l kitten pass_keys.py right  ctrl+l
