fix(fastfetch): update config syntax

--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -15,7 +15,9 @@
   },
   "display": {
     "separator": "",
-    "keyWidth": 9,
+    "key": {
+      "width": 9
+    },
     "color": {
       "title": "magenta",
       "keys": "blue"
