--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -2,12 +2,12 @@
   // JSON Schema
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "~/.config/fastfetch/logo/megumin.png",
-    "type": "kitty",
-    // "color": {
-    //   "6": "cyan",
-    //   "4": "blue"
-    // }
+    "source": "~/.config/fastfetch/logo/arch.txt",
+    "type": "auto",
+    "color": {
+      "6": "cyan",
+      "4": "blue"
+    },
     "width": 18,
     "padding": {
       "top": 1
