feat(tmux): change prefix key to c-space

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -12,6 +12,10 @@ bind -n C-M-Right resize-pane -R 1
 bind -n C-M-Up    resize-pane -U 1
 bind -n C-M-Down  resize-pane -D 1
 
+# Change prefix key from C-b to C-space
+unbind C-b
+set -g prefix C-space
+
 # Put the status bar to the bottom
 set -g status-position bottom
 
