feat(tmux): modify statusbar

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,6 +19,9 @@ set -g prefix C-space
 # Put the status bar to the bottom
 set -g status-position bottom
 
+# Don't rename windows automatically
+set -g allow-rename off
+
 # Renumber windows
 set -g renumber-windows on
 
@@ -35,7 +38,6 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'omerxx/tmux-sessionx'
 
@@ -43,17 +45,26 @@ set -g @plugin 'omerxx/tmux-sessionx'
 set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
 
-# Catppuccin config
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
+# Set the right status to be the current date and time
+set -g status-right "%I:%M %p %d %b %y "
+# Set global fg and bg
+set -g status-style fg=white,bg=#000000
+# Set the bg color of the session name to be green
+# if prefix is active
+set -g status-left "#{?client_prefix,#[bg=green],#[bg=cyan]}#[fg=black] #{session_name} "
+# Set the fg to be white for the current window
+set -g window-status-current-style fg=#ffffff
+# Set the bg to yellow and fg to black if
+# - activity is happening while the window is not active
+# - bell event (alert, notification, etc.)
+set -g window-status-activity-style bg=yellow,fg=#000000
+set -g window-status-bell-style bg=yellow,fg=#000000
 
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
+# Set window name unless it's zsh (currently not running any program)
+wn="#{?#{==:#W,zsh},, #W}"
+set -g window-status-current-format " #I${wn} "
+set -g window-status-format " #I${wn} "
+set -g window-status-separator "|"
 
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
-
+# Run tpm
 run '~/.config/tmux/plugins/tpm/tpm'
