feat(tmux): make the split binding uses `-` & `|`

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -16,6 +16,13 @@ bind -n C-M-Down  resize-pane -D 1
 unbind C-b
 set -g prefix C-space
 
+# Use prefix | - to split
+unbind %
+unbind '"'
+bind c neww -c '#{pane_current_path}'
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
+
 # Put the status bar to the bottom
 set -g status-position bottom
 
