feat(tmux): set the status bar at the top

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -24,7 +24,7 @@ bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 
 # Put the status bar to the bottom
-set -g status-position bottom
+set -g status-position top
 
 # Don't rename windows automatically
 set -g allow-rename off
