--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -55,8 +55,7 @@ set -g @resurrect-strategy-nvim 'session'
 # Set the right status to be the current date and time
 set -g status-right "%I:%M %p %d %b %y "
 # Set global fg and bg
-set -g status-style fg=white,bg=#000000
-# Set the bg color of the session name to be green
+set -g status-style fg=cyan,bg=default
 # if prefix is active
 set -g status-left "#{?client_prefix,#[bg=green],#[bg=cyan]}#[fg=black] #{session_name} "
 # Set the fg to be white for the current window
