feat(tmux): make command mode style nicer

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -65,6 +65,8 @@ set -g window-status-current-style fg=#ffffff
 # - bell event (alert, notification, etc.)
 set -g window-status-activity-style bg=yellow,fg=#000000
 set -g window-status-bell-style bg=yellow,fg=#000000
+# Set command mode style
+set -g message-style fg=white,bg=default
 
 # Set window name unless it's zsh (currently not running any program)
 wn="#{?#{==:#W,zsh},, #W}"
