feat(tmux): image passthrough

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,6 +2,10 @@
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
+# Image passthrough
+set -gq allow-passthrough on
+set -g visual-activity off
+
 # Shift alt vim keys to switch windows
 bind -n M-H previous-window
 bind -n M-L next-window
@@ -67,6 +71,8 @@ set -g window-status-activity-style bg=yellow,fg=#000000
 set -g window-status-bell-style bg=yellow,fg=#000000
 # Set command mode style
 set -g message-style fg=white,bg=default
+# Extend the session name max length
+set -g status-left-length 20
 
 # Set window name unless it's zsh (currently not running any program)
 wn="#{?#{==:#W,zsh},, #W}"
