feat(yt-dlp): add audio alias and move to ~/yt-dlp

--- a/.config/yt-dlp.conf
+++ b/.config/yt-dlp.conf
@@ -1,6 +1,6 @@
 # Save all downloaded videos into Videos directory
 # and stored it to it's own directory if we're downloading a playlist
--o "~/videos/%(playlist|)s/%(playlist_index&{} - |)s%(title)s [%(id)s].%(ext)s"
+-o "~/yt-dlp/%(playlist|)s/%(playlist_index&{} - |)s%(title)s [%(id)s].%(ext)s"
 
 # Select best quality with the video
 -f "bv+ba/b"
@@ -23,6 +23,5 @@
 --remux-video mp4
 --merge-output-format mp4
 
-# audio
---audio-format mp3
---audio-quality 320k
+# audio only alias
+--alias audio "--ignore-config -x --audio-format mp3 --audio-quality 320k --downloader aria2c --downloader-args aria2c:'-c -x6' --embed-metadata -o '~/yt-dlp/%(title)s [%(id)s].%(ext)s'"
