chore(yt-dlp): rework the config to include alias
Video that are 1080p or below, will be downloaded with h264 codec, and
video that are higher than that (2k, 4k, etc.) will be downloaded with
vp9, but then will be recoded to h264 with ffmpeg using `--recode mp4`,
that will happen when we pass `--video`.

When we pass `--audio` however, it will download the best audio
available, and will convert it to be mp3 and without losing it's quality
(max youtube audio bitrate is 320k)

--- a/.config/yt-dlp.conf
+++ b/.config/yt-dlp.conf
@@ -2,9 +2,6 @@
 # and stored it to it's own directory if we're downloading a playlist
 -o "~/yt-dlp/%(playlist|)s/%(playlist_index&{} - |)s%(title)s [%(id)s].%(ext)s"
 
-# Select best quality with the video
--f "bv+ba/b"
-
 # Embed metadata to the video
 --sub-langs="en.*,id,ja"
 --embed-thumbnail
@@ -19,9 +16,8 @@
 # Use aria2c for faster download
 --downloader aria2c --downloader-args aria2c:'-c -x6'
 
-# Remux and merge the video to mp4
---remux-video mp4
---merge-output-format mp4
+# video alias
+--alias video "-S res,vcodec:h264,acodec:aac --recode mp4"
 
 # audio only alias
---alias audio "--ignore-config -x --audio-format mp3 --audio-quality 320k --downloader aria2c --downloader-args aria2c:'-c -x6' --embed-metadata -o '~/yt-dlp/%(title)s [%(id)s].%(ext)s'"
+--alias audio "-x --audio-format mp3 --audio-quality 320k"
