feat(yt-dlp): add alias for 1080p and 720p video

--- a/.config/yt-dlp.conf
+++ b/.config/yt-dlp.conf
@@ -18,6 +18,8 @@
 
 # video alias
 --alias video "-S res,vcodec:h264,acodec:aac --recode mp4"
+--alias video1080p "-S res:1080,vcodec:h264,acodec:aac"
+--alias video720p "-S res:720,vcodec:h264,acodec:aac"
 
 # audio only alias
 --alias audio "-x --audio-format mp3 --audio-quality 320k"
