--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -57,13 +57,13 @@ set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
 
 # Set the right status to be the current date and time
-set -g status-right "%I:%M %p %d %b %y "
+set -g status-right "%I:%M %p %d %b %Y "
 # Set global fg and bg
-set -g status-style fg=cyan,bg=default
+set -g status-style fg=gray,bg=default
 # if prefix is active
 set -g status-left "#{?client_prefix,#[bg=green],#[bg=cyan]}#[fg=black] #{session_name} "
 # Set the fg to be white for the current window
-set -g window-status-current-style fg=#ffffff
+set -g window-status-current-style fg=brightgreen
 # Set the bg to yellow and fg to black if
 # - activity is happening while the window is not active
 # - bell event (alert, notification, etc.)
@@ -78,7 +78,7 @@ set -g status-left-length 20
 wn="#{?#{==:#W,zsh},, #W}"
 set -g window-status-current-format " #I${wn} "
 set -g window-status-format " #I${wn} "
-set -g window-status-separator "|"
+set -g window-status-separator " "
 
 # Run tpm
 run '~/.config/tmux/plugins/tpm/tpm'
