--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -1,4 +1,29 @@
+# uosc
 [".config/mpv"]
   type = "archive"
   url = "https://github.com/tomasklaen/uosc/releases/latest/download/uosc.zip"
+  refreshPeriod = "168h"
+
+# anime4k shaders
+{{ $anime4kOs := "Windows" }}
+{{ if eq .chezmoi.os "darwin" }}
+  {{ $anime4kOs = "Mac_Linux" }}
+{{ else if eq .chezmoi.os "linux" }}
+  {{ if (.chezmoi.kernel.osrelease | lower | contains "microsoft") }}
+    {{ $anime4kOs = "Windows" }}
+  {{ else }}
+    {{ $anime4kOs = "Mac_Linux" }}
+  {{ end }}
+{{ end }}
+[".config/mpv/shaders"]
+  type = "archive"
+  url = "https://github.com/Tama47/Anime4K/releases/latest/download/GLSL_{{ $anime4kOs }}_High-end.zip"
+  refreshPeriod = "168h"
+  include = ["shaders/**"]
+  stripComponents = 1
+
+# fsr shaders
+[".config/mpv/shaders/FSR.glsl"]
+  type = "file"
+  url = "https://gist.githubusercontent.com/agyild/82219c545228d70c5604f865ce0b0ce5/raw/FSR.glsl"
   refreshPeriod = "168h"
