--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -13,6 +13,12 @@ force-seekable=yes
 ## Appearance
 osc=no
 
+## Subtitle
+sub-font-size=40
+sub-bold=yes
+sub-pos=95
+secondary-sub-pos=10
+
 ## Screenshots
 screenshot-format=png
 screenshot-high-bit-depth=no
