fix(tmux): change foreground color to be black
They (tmux) somehow broke `gray` color on the 3.5 release of tmux
(https://github.com/tmux/tmux/commit/2d1e93447ef9d38b4f067134323e7f212c24eac4),
then I opened a discussion about it
(https://github.com/orgs/tmux/discussions/4142) and somehow they fixed
it
(https://github.com/tmux/tmux/commit/9bd039d1bc5f9109fb83fd2ed85e17d02908af19).

Ehh, I think `black` is better than `gray`. Because `gray` seems to
blend with `brightgreen`, which is the foreground color if the window is
currently selected.

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -59,7 +59,7 @@ set -g @resurrect-strategy-nvim 'session'
 # Set the right status to be the current date and time
 set -g status-right "%I:%M %p %d %b %Y "
 # Set global fg and bg
-set -g status-style fg=gray,bg=default
+set -g status-style fg=black,bg=default
 # if prefix is active
 set -g status-left "#{?client_prefix,#[bg=green],#[bg=cyan]}#[fg=black] #{session_name} "
 # Set the fg to be white for the current window
