--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -57,7 +57,7 @@ set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
 
 # Set the right status to be the current date and time
-set -g status-right "%I:%M %p %d %b %Y "
+set -g status-right "#[fg=cyan]%I:%M %p %d %b %Y "
 # Set global fg and bg
 set -g status-style fg=black,bg=default
 # if prefix is active
