--- a/dot_config/mpv/input.conf
+++ b/dot_config/mpv/input.conf
@@ -1,5 +1,8 @@
 # Right click to open uosc menu
-mbtn_right  script-binding uosc/menu
+mbtn_right script-binding uosc/menu
+
+# 'a' to open seek-to menu
+a script-binding toggle-seeker
 
 # Rotate video
 ctrl+r cycle_values video-rotate "90" "180" "270" "0"
