feat(mpv): set shift+up/down arrow to seek 1m30s

--- a/dot_config/mpv/input.conf
+++ b/dot_config/mpv/input.conf
@@ -1,3 +1,13 @@
+# Shift + Up/Down arrow key to seek 90sec (1min30sec)
+# instead of the default 5sec which can be achived
+# simply by using the right and left arrow key
+#
+# Why exactly 90sec (1min30sec) you might ask?
+# Well, it's because most anime OP/ED last 1min30sec
+# See https://anime.stackexchange.com/questions/2597/
+Shift+UP    seek 90
+Shift+DOWN  seek -90
+
 # Right click to open uosc menu
 mbtn_right script-binding uosc/menu
 
