--- a/dot_config/mpv/input.conf
+++ b/dot_config/mpv/input.conf
@@ -1,3 +1,4 @@
+## General
 # Shift + Up/Down arrow key to seek 90sec (1min30sec)
 # instead of the default 5sec which can be achived
 # simply by using the right and left arrow key
@@ -8,20 +9,22 @@
 Shift+UP    seek 90
 Shift+DOWN  seek -90
 
+# Rotate video
+ctrl+r cycle_values video-rotate "90" "180" "270" "0"
+
+## Script
 # Right click to open uosc menu
 mbtn_right script-binding uosc/menu
 
 # 'a' to open seek-to menu
 a script-binding toggle-seeker
 
-# Rotate video
-ctrl+r cycle_values video-rotate "90" "180" "270" "0"
-
 # Bookmark (NurioHin/mpv-bookmarker)
 B script_message bookmarker-menu
 b script_message bookmarker-quick-save
 ctrl+b script_message bookmarker-quick-load
 
+## Shaders
 # Anime4k Shaders
 # Optimized shaders for higher-end GPU
 CTRL+1 no-osd change-list glsl-shaders set "~~/shaders/Anime4K_Clamp_Highlights.glsl;~~/shaders/Anime4K_Restore_CNN_VL.glsl;~~/shaders/Anime4K_Upscale_CNN_x2_VL.glsl;~~/shaders/Anime4K_AutoDownscalePre_x2.glsl;~~/shaders/Anime4K_AutoDownscalePre_x4.glsl;~~/shaders/Anime4K_Upscale_CNN_x2_M.glsl"; show-text "Anime4K: Mode A (HQ)"
