chore(mpv): reduce shift+up/down seek duration

--- a/dot_config/mpv/input.conf
+++ b/dot_config/mpv/input.conf
@@ -1,13 +1,19 @@
 ## General
-# Shift + Up/Down arrow key to seek 90sec (1min30sec)
+# Shift + Up/Down arrow key to seek 85sec (1min25sec)
 # instead of the default 5sec which can be achived
 # simply by using the right and left arrow key
 #
-# Why exactly 90sec (1min30sec) you might ask?
+# Why exactly 85sec (1min25sec) you might ask?
 # Well, it's because most anime OP/ED last 1min30sec
 # See https://anime.stackexchange.com/questions/2597/
-Shift+UP    seek 90
-Shift+DOWN  seek -90
+#
+# But you definitely need to watch the OP/ED first
+# for around 2 second or so before hitting the seek
+# button. Setting it to exactly 90sec would make you
+# seek backword by 5sec if you've watched the OP/ED for more
+# than a second. So I've rounded the number down to 85sec.
+Shift+UP    seek 85
+Shift+DOWN  seek -85
 
 # Rotate video
 ctrl+r cycle_values video-rotate "90" "180" "270" "0"
