feat(mpv): add id and ja subtitle to ytdlp conf

--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -36,7 +36,7 @@ deband-grain=48
 ## yt-dlp
 script-opts-append=ytdl_hook-ytdl_path=yt-dlp
 script-opts-add=osc-title=${media-title}${?chapter-metadata/title: [${chapter-metadata/title}]}
-ytdl-raw-options='sub-langs="^en.*",write-subs=,write-auto-subs='
+ytdl-raw-options='sub-langs="^en.*,id,ja",write-subs=,write-auto-subs='
 
 ## uosc
 # uosc provides seeking & volume indicators (via flash-timeline and flash-volume commands)
