feat(ssh): add ssh key from bitwarden using `rbw`
Also ignore `~/.ssh` if username is not `barra` (not my computer) so
that other people can use it without using my ssh config and key

--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,2 +1,8 @@
 LICENSE
 README.md
+
+# ignore ~/.ssh if it's not my computer
+# because why would you?
+{{ if not (eq .chezmoi.username "barra") -}}
+.ssh/
+{{ end }}
