--- a/dot_config/yazi/package.toml
+++ b/dot_config/yazi/package.toml
@@ -1,2 +1,5 @@
+[plugin]
+deps = [{ use = "yazi-rs/plugins:full-border", rev = "d85bfd6" }, { use = "yazi-rs/plugins:git", rev = "d85bfd6" }, { use = "Sonico98/exifaudio", rev = "855ff05" }]
+
 [flavor]
 deps = [{ use = "yazi-rs/flavors:catppuccin-mocha", rev = "c686812" }]
