--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -27,11 +27,7 @@ screenshot-directory="~/pictures/mpv"
 screenshot-template="%F-%p-%02n"
 
 ## Deband
-# Set to "no" as we only need to enable it for specific cases
-deband=no
-deband-iterations=4
-deband-threshold=48
-deband-grain=48
+deband=yes
 
 ## yt-dlp
 script-opts-append=ytdl_hook-ytdl_path=yt-dlp
