chore(mpv): use more readable screenshot dir path
Based on https://wiki.archlinux.org/title/Mpv#Reproducible_screenshots

--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -22,7 +22,7 @@ secondary-sub-pos=10
 ## Screenshots
 screenshot-format=png
 screenshot-directory="~/pictures/mpv"
-screenshot-template="%F-%p-%02n"
+screenshot-template="%F - %p (%#01n)"
 
 ## Deband
 deband=yes
