feat(yt-dlp): save video inside videos/yt-dlp dir

--- a/dot_config/yt-dlp.conf
+++ b/dot_config/yt-dlp.conf
@@ -1,6 +1,6 @@
 # Save all downloaded videos into Videos directory
 # and stored it to it's own directory if we're downloading a playlist
--o "~/yt-dlp/%(playlist|)s/%(playlist_index&{} - |)s%(title)s [%(id)s].%(ext)s"
+-o "~/videos/yt-dlp/%(playlist|)s/%(playlist_index&{} - |)s%(title)s [%(id)s].%(ext)s"
 
 # Embed metadata to the video
 --sub-langs="en.*,id,ja"
