feat(electron): add support for middleclick scroll

--- a/dot_config/electron-flags.conf
+++ b/dot_config/electron-flags.conf
@@ -1,2 +1,6 @@
---enable-features=WaylandWindowDecorations
+# Use wayland for electron apps.
+#
+# Note that these configuration file only work for the system (arch) electron packages.
+# See: https://wiki.archlinux.org/title/Wayland#Configuration_file
+--enable-features=WaylandWindowDecorations,MiddleClickAutoscroll
 --ozone-platform-hint=auto
