--- a/dot_config/yt-dlp.conf
+++ b/dot_config/yt-dlp.conf
@@ -1,4 +1,4 @@
-# Save all downloaded videos into Videos directory
+# Save all downloaded videos into `~/videos/yt-dlp` directory
 # and stored it to it's own directory if we're downloading a playlist
 -o "~/videos/yt-dlp/%(playlist|)s/%(playlist_index&{} - |)s%(title)s [%(id)s].%(ext)s"
 
@@ -16,10 +16,10 @@
 # Use aria2c for faster download
 --downloader aria2c --downloader-args aria2c:'-c -x6'
 
-# video alias
+# Video alias
 --alias video "-S res,vcodec:h264,acodec:aac --recode mp4"
 --alias video1080p "-S res:1080,vcodec:h264,acodec:aac"
 --alias video720p "-S res:720,vcodec:h264,acodec:aac"
 
-# audio only alias
+# Audio only alias
 --alias audio "-x --audio-format mp3 --audio-quality 320k"
