fix(mpv): turn deband off by default

--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -26,7 +26,7 @@ screenshot-directory="~/pictures/mpv"
 screenshot-template="%F - %p (%#01n)"
 
 ## Deband
-deband=yes
+deband=no
 
 ## yt-dlp
 script-opts-append=ytdl_hook-ytdl_path=yt-dlp
