feat(mpv): prioritize en sub and ja dub

--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -25,6 +25,10 @@ screenshot-format=png
 screenshot-directory="~/pictures/mpv"
 screenshot-template="%F - %p (%#01n)"
 
+## Language
+slang=eng,en
+alang=jpn,ja,eng,en
+
 ## Deband
 deband=no
 
