chore(mpv): format screenshot same like spectacle

--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -22,8 +22,8 @@ secondary-sub-pos=10
 
 ## Screenshots
 screenshot-format=png
-screenshot-directory="~/pictures/mpv"
-screenshot-template="%F - %p (%#01n)"
+screenshot-directory="~/pictures/screenshots"
+screenshot-template="Screenshot_%tY%tm%td_%tH%tM%tS"
 
 ## Language
 slang=eng,en
