feat(mpv): ignore some default keybind
The one that possibly is unwanted (such as going to the next file on
playlist when pressing the Enter key, and mouse scroll for volume and
seek), and also the deprecated keybind specified at the man pages

--- a/dot_config/mpv/input.conf
+++ b/dot_config/mpv/input.conf
@@ -18,6 +18,29 @@ Shift+DOWN  seek -85
 # Rotate video
 ctrl+r cycle_values video-rotate "90" "180" "270" "0"
 
+## Disable default
+# Disable scroll wheel keybind except
+# the one with ctrl (change video zoom)
+#
+# uosc allows you to increase/decrease volume
+# by scrolling while hovering over the volume bar,
+# the same also applies to seeking through video
+WHEEL_UP    ignore
+WHEEL_DOWN  ignore
+WHEEL_RIGHT ignore
+WHEEL_LEFT  ignore
+
+# Disable next video on Enter
+# Like, why this keybind even exist in the
+# first place, people can accidentally clicked it
+# and also the `<` and `>` key exists
+ENTER ignore
+
+# Keybind whose use is listed as "discouraged"
+e ignore # decrease/increase panscan, use w and W instead
+x ignore # adjust subtitle delay,     use z and Z instead
+t ignore # move subtitles up/down,    use r and R instead
+
 ## Script
 # Right click to open uosc menu
 mbtn_right script-binding uosc/menu
