feat(fastfetch): show flatpak packages

--- a/dot_config/fastfetch/config.jsonc
+++ b/dot_config/fastfetch/config.jsonc
@@ -43,7 +43,7 @@
     {
       "type": "packages",
       "key": "pkgs",
-      "format": "{2} (pacman)"
+      "format": "{2} (pacman) {39} (flatpak)"
     },
     {
       "type": "memory",
