fix(mpv): use sub-margin-y instead of sub-pos
Using sub-pos will also affect ASS subtitle, and it'll mess some
subtitles, but sub-margin-y will only affect normal/unstyled subtitles.

Please refer to the man pages for more information:
https://mpv.io/manual/master/#options-sub-pos
https://mpv.io/manual/master/#options-sub-margin-y

--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -17,8 +17,8 @@ autofit-larger=100%x90%
 ## Subtitle
 sub-font-size=40
 sub-bold=yes
-sub-pos=95
 secondary-sub-pos=10
+sub-margin-y=50
 
 ## Screenshots
 screenshot-format=png
