style(mpv): dont display progress bar on windowed
This will prevent uosc progress bar for always showing when on windowed
(the default behaviour)

--- a/dot_config/mpv/script-opts/uosc.conf
+++ b/dot_config/mpv/script-opts/uosc.conf
@@ -1,8 +1,12 @@
 # Timeline size when fully expanded, in pixels, 0 to disable
 timeline_size=25
 
+# Don't display progress bar on windowed
+progress=
+
 # Display sub second fraction in timestamps up to this precision
 time_precision=2
+
 # Move files to trash (recycle bin) when deleting files. Dependencies:
 # - Linux: `sudo apt install trash-cli`
 # - MacOS: `brew install trash`
