--- a/dot_config/fastfetch/config.jsonc
+++ b/dot_config/fastfetch/config.jsonc
@@ -2,16 +2,13 @@
   // JSON Schema
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "~/.config/fastfetch/logo/arch.txt",
-    "type": "auto",
-    "color": {
-      "6": "cyan",
-      "4": "blue"
-    },
-    "width": 18,
-    "padding": {
-      "top": 1
-    }
+    "source": "~/pictures/pfp.jpg",
+    "type": "kitty-icat",
+    // "color": {
+    //   "6": "cyan",
+    //   "4": "blue"
+    // },
+    "width": 13
   },
   "display": {
     "separator": "",
