feat(yt-dlp): add videoytsub to get youtube subs
This custom option/alias (--videoytsub) will no longer embed the sub but
it will write srv3 formatted subs which then you can convert it into
.ass using ytsubconverter
https://github.com/arcusmaximus/YTSubConverter

--- a/dot_config/yt-dlp.conf
+++ b/dot_config/yt-dlp.conf
@@ -21,5 +21,8 @@
 --alias video1080p "-S res:1080,vcodec:h264,acodec:aac"
 --alias video720p "-S res:720,vcodec:h264,acodec:aac"
 
+# Video srv3 subs
+--alias videoytsub "--no-embed-subs --write-subs --sub-format=srv3"
+
 # Audio only alias
 --alias audio "-x --audio-format mp3 --audio-quality 320k"
