--- a/dot_config/yazi/package.toml
+++ b/dot_config/yazi/package.toml
@@ -1,5 +1,19 @@
-[plugin]
-deps = [{ use = "yazi-rs/plugins:full-border", rev = "d85bfd6" }, { use = "yazi-rs/plugins:git", rev = "d85bfd6" }, { use = "Sonico98/exifaudio", rev = "855ff05" }]
+[[plugin.deps]]
+use = "yazi-rs/plugins:full-border"
+rev = "beb586a"
+hash = "ae9e1d0c6bfd68cdebc98cc684c22b45"
 
-[flavor]
-deps = [{ use = "yazi-rs/flavors:catppuccin-mocha", rev = "c686812" }]
+[[plugin.deps]]
+use = "yazi-rs/plugins:git"
+rev = "beb586a"
+hash = "771f18427fb75fb19990ce602bb322f4"
+
+[[plugin.deps]]
+use = "Sonico98/exifaudio"
+rev = "d794614"
+hash = "a8e15d3c21c02a5af41d46ed04778a02"
+
+[[flavor.deps]]
+use = "yazi-rs/flavors:catppuccin-mocha"
+rev = "1a419b2"
+hash = "c40e434318a8ceffd01842f8dfb2390e"
