--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -11,7 +11,8 @@ sub-auto=fuzzy
 force-seekable=yes
 
 ## Appearance
-osc=no
+osc=no # use uosc
+osd-bar=no # uosc also provide it
 autofit-larger=100%x90%
 
 ## Subtitle
@@ -32,11 +33,6 @@ deband=no
 script-opts-append=ytdl_hook-ytdl_path=yt-dlp
 script-opts-add=osc-title=${media-title}${?chapter-metadata/title: [${chapter-metadata/title}]}
 ytdl-raw-options='sub-langs="^en.*,id,ja",write-subs=,write-auto-subs='
-
-## uosc
-# uosc provides seeking & volume indicators (via flash-timeline and flash-volume commands)
-# if you decide to use them, you don't need osd-bar
-osd-bar=no
 
 # Loop if its a gif
 [extension.gif]
