feat(mpv): autohide cursor even when hovering uosc

--- a/dot_config/mpv/script-opts/uosc.conf
+++ b/dot_config/mpv/script-opts/uosc.conf
@@ -7,7 +7,8 @@ progress=
 # Display sub second fraction in timestamps up to this precision
 time_precision=2
 
-# Move files to trash (recycle bin) when deleting files. Dependencies:
-# - Linux: `sudo apt install trash-cli`
-# - MacOS: `brew install trash`
+# Hide UI when mpv autohides the cursor. Timing is controlled by `cursor-autohide` in `mpv.conf` (in milliseconds).
+autohide=yes
+
+# Move files to trash (recycle bin) when deleting files.
 use_trash=yes
