chore(mpv): remove speed control and add audio menu
We can change speed using [ ] { } and it will also now show audio menu
button regardless if there's only a single one

--- a/dot_config/mpv/script-opts/uosc.conf
+++ b/dot_config/mpv/script-opts/uosc.conf
@@ -10,5 +10,8 @@ time_precision=2
 # Hide UI when mpv autohides the cursor. Timing is controlled by `cursor-autohide` in `mpv.conf` (in milliseconds).
 autohide=yes
 
+# A comma delimited list of controls above the timeline. Set to `never` to disable.
+controls=menu,gap,subtitles,audio,<has_many_video>video,<has_many_edition>editions,<stream>stream-quality,gap,space,shuffle,loop-playlist,loop-file,gap,prev,items,next,gap,fullscreen
+
 # Move files to trash (recycle bin) when deleting files.
 use_trash=yes
