chore(mpv): add 0.1 instead of add 10% speed using [ ]
I will now try to explain the changes on the files, with a comment
instead of writing it in a commit body. Why? Well, it's not relatively
easy to search commit for specific changes, but if it's on a file, we
can see it right away.

--- a/dot_config/mpv/input.conf
+++ b/dot_config/mpv/input.conf
@@ -15,6 +15,14 @@
 Shift+UP    seek 85
 Shift+DOWN  seek -85
 
+# Increase and decrease playback speed using [ and ]
+# will add 0.1x instead of multiplying it by 10%
+#
+# Well because I want to have it increased in a 0.1 step:
+# 1.0x 1.1x 1.2x instead of: 1.0x 1.1x 1.33x 1.46x
+[ add speed -0.1
+] add speed 1.0
+
 # Rotate video
 ctrl+r cycle_values video-rotate "90" "180" "270" "0"
 
