chore(mpv): improve comments and remove depricated option

--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -1,28 +1,73 @@
 ## Video
-profile=gpu-hq
+# Use the `high-quality` profile built-in
+# https://github.com/mpv-player/mpv/blob/master/etc/builtin.conf#L54-L57
+#
+# Generally, a better upscaler
+profile=high-quality
+
+# Generally faster and higher quality
+# than `gpu`, you can see the wiki for the difference:
+# https://github.com/mpv-player/mpv/wiki/GPU-Next-vs-GPU
+#
+# Also it's needed for vulkan video decoding below
 vo=gpu-next
+
+# Use vulkan video decoding
 gpu-api=vulkan
-hwdec=auto-safe
+hwdec=vulkan
 
 ## Behaviour
+# Use precise seek whenever possible
 hr-seek=yes
+
+# Don't close mpv when the video finished playing
 keep-open=yes
+
+# Try to load all subtitle that contain the media filename
 sub-auto=fuzzy
+
+# Force seeking even if the server doesn't support it.
+# This is helpful to seek within cache
 force-seekable=yes
 
 ## Appearance
-osc=no # use uosc
-osd-bar=no # uosc also provide it
+# Use uosc
+osc=no
+osd-bar=no
+
+# Make sure that mpv spawn a new window larger
+# than the screen. Putting 90% as the height
+# to account for the taskbar
 autofit-larger=100%x90%
 
 ## Subtitle
+# Do note that these setting only applies to
+# non-ASS subtitle such as the normal .srt
+
+# Make it slightly larger and bold
 sub-font-size=40
 sub-bold=yes
+
+# Position the first and secondary sub
+# to make sure they're not really close to
+# the vertical side.
+#
+# Using `sub-margin-y` instead of `sub-pos`
+# because `sub-pos` affects ASS subtitles too
 secondary-sub-pos=10
 sub-margin-y=50
 
 ## Screenshots
+# Use .png file format
 screenshot-format=png
+
+# Put screenshot on the default directory and name it
+# the same as the default Spectacle (KDE) screenshot:
+# Screenshot_YYYYMMDD_HHMMSS.png
+#
+# I also make sure to "tag" (user.xdg.tags) it as `mpv`
+# for the screenshot file so that it's somewhat organized,
+# see input.conf and screenshot.sh
 screenshot-directory="~/pictures/screenshots"
 screenshot-template="Screenshot_%tY%tm%td_%tH%tM%tS"
 
@@ -30,10 +75,14 @@ screenshot-template="Screenshot_%tY%tm%td_%tH%tM%tS"
 deband=no
 
 ## yt-dlp
+# Use yt-dlp
 script-opts-append=ytdl_hook-ytdl_path=yt-dlp
-script-opts-add=osc-title=${media-title}${?chapter-metadata/title: [${chapter-metadata/title}]}
+
+# Include english, indonesian, and japanese
+# subtitle (both auto and non-auto)
 ytdl-raw-options='sub-langs="^en.*,id,ja",write-subs=,write-auto-subs='
 
+## Auto-profile
 # Loop if its a gif
 [extension.gif]
 loop=inf
