--- a/dot_config/mpv/script-opts/uosc.conf
+++ b/dot_config/mpv/script-opts/uosc.conf
@@ -1,17 +1,38 @@
-# Timeline size when fully expanded, in pixels, 0 to disable
+# Timeline/Seek bar height (px), default is 40.
+# Make it so it doesn't take so much space
 timeline_size=25
 
 # Don't display progress bar on windowed
+# as it'll sacrifice some bottom pixel of the video
 progress=
 
-# Display sub second fraction in timestamps up to this precision
+# Display 2 numbers after the comma
 time_precision=2
 
-# Hide UI when mpv autohides the cursor. Timing is controlled by `cursor-autohide` in `mpv.conf` (in milliseconds).
+# Hide ui when mpv autohide the cursor, configurable on mpv
+# under `cursor-autohide` config, defaults to `1000` (ms)
 autohide=yes
 
-# A comma delimited list of controls above the timeline. Set to `never` to disable.
+# Made some changes to the control from the default control
+# button above the timeline bar.
+#
+# 1. Remove speed control
+# IMO it takes too much space and you can do it by using
+# [ and ] - increase/decrease speed by 0.1x (see input.conf)
+# { and } - multiply/divide speed by 2x
+#
+# 2. Always show audio button
+# By default, the control button only shows when there is
+# multiple audio stream.
+#
+# For me it nice to have them always shown regardless if
+# they only have one audio stream.
 controls=menu,gap,subtitles,audio,<has_many_video>video,<has_many_edition>editions,<stream>stream-quality,gap,space,shuffle,loop-playlist,loop-file,gap,prev,items,next,gap,fullscreen
 
-# Move files to trash (recycle bin) when deleting files.
+# When deleting file using the uosc menu (which I removed it,
+# see input.conf. But just in case) it will go to trash instead
+# of deleting it.
+#
+# Make sure you have `trash-cli` installed.
+# https://wiki.archlinux.org/title/Trash_management
 use_trash=yes
