--- a/dot_config/mpv/input.conf
+++ b/dot_config/mpv/input.conf
@@ -79,3 +79,32 @@ CTRL+7 no-osd change-list glsl-shaders set "~~/shaders/FSR.glsl"; show-text "FSR
 
 # Clear Shaders
 CTRL+0 no-osd change-list glsl-shaders clr ""; show-text "GLSL shaders cleared"
+
+## Uosc context menu
+# uosc uses input.conf config
+#
+# yes, they start with `#`, if you don't
+# want to assign keybind, just like a comment
+
+# Remove some of the unnecessary items
+# 1. Delete file, just why
+# 2. Screenshot, just use `s`, `S` or `<C-s>`
+
+# script-binding uosc/subtitles             #! Subtitles
+# script-binding uosc/audio                 #! Audio tracks
+# script-binding uosc/stream-quality        #! Stream quality
+# script-binding uosc/items                 #! Playlist
+# script-binding uosc/chapters              #! Chapters
+# script-binding uosc/next                  #! Navigation > Next
+# script-binding uosc/prev                  #! Navigation > Prev
+# script-binding uosc/open-file             #! Navigation > Open file
+# set video-aspect-override "-1"            #! Utils > Aspect ratio > Default
+# set video-aspect-override "16:9"          #! Utils > Aspect ratio > 16:9
+# set video-aspect-override "4:3"           #! Utils > Aspect ratio > 4:3
+# set video-aspect-override "2.35:1"        #! Utils > Aspect ratio > 2.35:1
+# script-binding uosc/audio-device          #! Utils > Audio devices
+# script-binding uosc/editions              #! Utils > Editions
+# script-binding uosc/keybinds              #! Utils > Key bindings
+# script-binding uosc/show-in-directory     #! Utils > Show in directory
+# script-binding uosc/open-config-directory #! Utils > Open config directory
+# script-binding uosc/update                #! Utils > Update uosc
