chore(mpv): specify `gpu-context`

--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -15,6 +15,7 @@ vo=gpu-next
 # Use vulkan video decoding
 gpu-api=vulkan
 hwdec=vulkan
+gpu-context=waylandvk
 
 ## Behaviour
 # Use precise seek whenever possible
