style(mpv): make the osd text smaller

--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -36,6 +36,9 @@ force-seekable=yes
 osc=no
 osd-bar=no
 
+# Make osd text smaller
+osd-font-size=30
+
 # Make sure that mpv spawn a new window larger
 # than the screen. Putting 90% as the height
 # to account for the taskbar
