fix(mpv): using `c` will now open videoclip again
Explicitly specify `c` for videoclip or else the keybinding will be used
by visualizer plugin

--- a/dot_config/mpv/input.conf
+++ b/dot_config/mpv/input.conf
@@ -51,7 +51,10 @@ t ignore # move subtitles up/down,    use r and R instead
 
 ## Script
 # 'a' to open seek-to menu
-a script-binding toggle-seeker
+a script-binding seek_to/toggle-seeker
+
+# 'c' to open videoclip menu
+c script-binding videoclip/videoclip-menu-open
 
 ## Shaders
 # Anime4k Shaders
