feat(mpv): save videoclip to `~/videos/clip` and formatted
Format it the same as screenshot,
`clip_YYYYMMDD_HHMMSS`

--- a/dot_config/mpv/script-opts/videoclip.conf
+++ b/dot_config/mpv/script-opts/videoclip.conf
@@ -9,8 +9,7 @@ video_quality=0
 audio_format=opus
 audio_bitrate=256k
 
-# path
-video_folder_path={{ output "xdg-user-dir" "VIDEOS" | trim }}
-audio_folder_path={{ output "xdg-user-dir" "MUSIC" | trim }}
+# filename template
+video_folder_path=~/videos/clip
+filename_template=clip_%Y%M%D_%H%N%S
 
-# vim: filetype=conf syntax=conf
