feat(tmux): disable mouse select to copy

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -76,3 +76,8 @@ set -g window-status-separator " "
 
 # Run tpm
 run '~/.config/tmux/plugins/tpm/tpm'
+
+# Disable mouse selection to copy
+# For some reason, we need to set it at the very bottom
+# Maybe because a plugin override this
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys
