--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -80,4 +80,4 @@ run '~/.config/tmux/plugins/tpm/tpm'
 # Disable mouse selection to copy
 # For some reason, we need to set it at the very bottom
 # Maybe because a plugin override this
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys
