feat(tmux): `Esc` now exit copy mode

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -27,6 +27,9 @@ bind c neww -c '#{pane_current_path}'
 bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 
+# Use Esc to exit copy mode
+bind -T copy-mode-vi Escape send-keys -X cancel
+
 # Put the status bar to the bottom
 set -g status-position top
 
