feat(mpv): use serif font for non-ASS subs

--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -51,6 +51,7 @@ autofit-larger=100%x90%
 # Make it slightly larger and bold
 sub-font-size=50
 sub-bold=yes
+sub-font=serif
 
 # Position the first and secondary sub
 # to make sure they're not really close to
