feat(mpv): `o` will now show uosc's progress bar
Alongside the casual osd text that shows `time-pos/duration`. Also
removes unnecessary quote around rotate video input conf

--- a/dot_config/mpv/input.conf
+++ b/dot_config/mpv/input.conf
@@ -24,7 +24,7 @@ Shift+DOWN  seek -85
 ] add speed 0.1
 
 # Rotate video
-ctrl+r cycle_values video-rotate "90" "180" "270" "0"
+ctrl+r cycle_values video-rotate 90 180 270 0
 
 ## Disable default
 # Disable scroll wheel keybind except
@@ -50,6 +50,10 @@ x ignore # adjust subtitle delay,     use z and Z instead
 t ignore # move subtitles up/down,    use r and R instead
 
 ## Script
+# 'o' to show progressbar for a second
+# and the built in progress bar
+o script-message-to uosc flash-elements timeline; show-progress
+
 # 'a' to open seek-to menu
 a script-binding seek_to/toggle-seeker
 
