feat(mpv): use { and } for increase/decrease speed by 1.0

--- a/dot_config/mpv/input.conf
+++ b/dot_config/mpv/input.conf
@@ -22,6 +22,10 @@ Shift+DOWN  seek -85
 # 1.0x 1.1x 1.2x instead of: 1.0x 1.1x 1.33x 1.46x
 [ add speed -0.1
 ] add speed 0.1
+# That goes the same with { and }, instead of multiplying
+# the speed by 200%, it will add 1.0x
+{ add speed -1.0
+} add speed 1.0
 
 # Rotate video
 ctrl+r cycle_values video-rotate 90 180 270 0
