feat(mpv): write filename in watch later so we can `g-w` for watch later

--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -79,6 +79,8 @@ screenshot-template="Screenshot_%tY%tm%td_%tH%tM%tS"
 ## Deband
 deband=no
 
+write-filename-in-watch-later-config=yes
+
 ## yt-dlp
 # Use yt-dlp
 script-opts-append=ytdl_hook-ytdl_path=yt-dlp
