--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -51,7 +51,9 @@ autofit-larger=100%x90%
 # Make it slightly larger and bold
 sub-font-size=50
 sub-bold=yes
-sub-font=serif
+sub-font="Gandhi Sans"
+sub-outline-size=2.5
+sub-shadow-offset=1
 
 # Position the first and secondary sub
 # to make sure they're not really close to
